# hydra-tracker

./: Cargo.toml  README.md  config.example.toml
src/: app.rs  config.rs  main.rs
src/chains/: evm.rs  mod.rs  solana.rs
src/pnl/: mod.rs
src/pricing/: coingecko.rs  dexscreener.rs  jupiter.rs  mod.rs
src/ui/: holdings.rs  layout.rs  mod.rs  pnl_tab.rs  transactions.rs
